# Quorum

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.kfold.yml  docker-compose.lora.yml  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
assets/: demo.tape
config/: concept_aliases.yaml
eval/: judge_config.yaml
eval/baselines/: classification_v1.json
eval/datasets/: injection_v1.yaml  retrieval_v1.yaml
eval/datasets/judge_sft/: train.jsonl  val_case_ids.txt
eval/datasets/v1/: gold.yaml
eval/fixtures/: demo_replay.jsonl
eval/injection/: results.json
eval/results/campaign-agentic/: happy_aapl_msft_growth.json  happy_aapl_msft_profitability.json  happy_cost_pep_leverage.json  happy_googl_meta_growth.json  happy_jnj_pfe_leverage.json  happy_jnj_pfe_profitability.json  happy_lly_pfe_profitability.json  happy_meta_aapl_leverage.json  happy_mixed_quant_qual.json  happy_mrk_lly_growth.json  happy_mrk_lly_risks.json  happy_msft_googl_profitability.json  happy_multi_axis_cost_pg.json  happy_multi_axis_meta_googl.json  happy_multi_axis_pharma.json  happy_multi_axis_staples.json  happy_multi_axis_tech.json  happy_pep_ko_profitability.json  happy_pg_ko_leverage.json  happy_pharma_risks.json  happy_staples_risks.json  happy_tech_risks.json  happy_three_staples_profitability.json  partial_capex_comparison.json  partial_gross_margin_googl.json  partial_insufficient_growth_for_costco.json  partial_inventory_turnover.json  partial_long_window_tech.json  partial_segment_revenue.json  refuse_mixed_one_in_corpus.json  refuse_off_topic.json  refuse_off_topic_sports.json  (+10 more)
postgres-init/: 01-init.sql
scripts/: aggregate_kfold.py  bge_m3_healthcheck.py  build_gallery.py  build_judge_sft.py  demo.py  gate_judge_qlora.sh  kfold_gate.sh  kfold_train.sh  migrate_facts_v2.sql  render_graph.py  run_ab_compare.py  run_cache_hitrate.py  run_classification_eval.py  run_cost_report.py  run_crossvendor_audit.py  run_injection_eval.py  run_judge_correlation.py  run_retrieval_eval.py  run_serving_bench.py  run_smoke_eval.py  train_judge_qlora.py
spike/: README.md  walking_skeleton.py
tests/: conftest.py
tests/integration/: test_compose_services.py  test_embedder.py  test_facts_real_data.py  test_ingest_data_quality.py  test_inventory_real_corpus.py  test_search_real_corpus.py  test_trace_writer.py  test_vllm.py
tests/kill_resume/: conftest.py  fakes.py  runner.py  test_kill_resume.py
tests/smoke/: test_imports.py
tests/unit/: test_ab_compare.py  test_agent_loop.py  test_analyst_evidence_trim.py  test_analyst_parser.py  test_analyst_per_company.py  test_analyst_retry.py  test_analyze_agentic.py  test_api.py  test_canonical_json.py  test_chat_cache_wiring.py  test_checkpoint_allowlist.py  test_chunk.py  test_cost.py  test_critic.py  test_demo_replay.py  test_edgar.py  test_embed_cache.py  test_eval.py  test_eval_metrics.py  test_facts_aliases.py  test_gold_dataset.py  test_graph_build.py  test_judge_correlation.py  test_judge_parsing.py  test_judge_wiring.py  test_llm_cache.py  test_mcp_server.py  test_nodes.py  test_parse.py  test_rebut.py  test_resolve_company.py  test_retrieval_eval.py  test_router.py  test_settings.py  test_state.py  test_tool_use_eval.py
(+259 files in other folders)
