[project]
name = "quorum"
version = "0.1.0"
description = "Multi-agent RAG system on LangGraph: parallel per-axis analyst agents over hybrid retrieval (Qdrant, BGE-M3) and Postgres, a tool-using critic for claim-level fact-checking, MCP server, and an eval harness with A/B campaigns and a QLoRA-distilled local judge."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  # LLM clients
  "anthropic",
  "openai",
  # Graph and durable state
  "langgraph",
  "langgraph-checkpoint-postgres",
  # Vector store and embeddings
  "qdrant-client",
  "FlagEmbedding",
  # Postgres driver (sync + async support; binary build, connection pool)
  "psycopg[binary,pool]",
  # Web surface
  "fastapi",
  "uvicorn",
  # MCP server
  "mcp",
  # Ingest and HTTP
  "httpx",
  "beautifulsoup4",
  "lxml",
  # Validation, caching, config, logging
  "pydantic",
  "pydantic-settings",
  "diskcache",
  "python-dotenv",
  "structlog",
  # Concept-aliases YAML (config/concept_aliases.yaml) is the natural format
  # for nested per-ticker overrides; tomllib would force flat tables.
  "pyyaml",
  "psycopg-pool>=3.3.1",
  "jinja2>=3.1.6",
  "markdown-it-py>=4.2.0",
]

[project.optional-dependencies]
# Eval-only deps. Kept out of the runtime install to keep the API image lean.
# scipy provides spearman, pearson, bootstrap; weighted kappa is implemented
# inline against numpy.
eval = ["scipy"]

# QLoRA judge-distillation deps. Local-only, never in the API or vLLM image.
# torch is already resolved for the sm_120 card, so it stays out of this group
# to avoid re-pinning the CUDA build.
train = [
  "transformers",
  "peft",
  "bitsandbytes",
  "trl",
  "accelerate",
  "datasets",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
  # Test doubles for boundary calls
  "respx",          # httpx mocking
  # Type stubs
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quorum"]

# Ruff: matches what pre-commit enforces.
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # long lines handled by formatter

# mypy: strict where the design demands it (phase 1 gate), permissive elsewhere
# until those phases lock their interfaces.
[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
  "quorum.state.*",
  "quorum.graph.*",
  "quorum.tools.*",
  "quorum.models.*",
  "quorum.cache.*",
]
strict = true

# Ignore missing stubs for libs that ship none. Each one keeps the strict block
# clean without weakening typing in our own code.
[[tool.mypy.overrides]]
module = [
  "FlagEmbedding.*",
  "diskcache.*",
  "qdrant_client.*",
  "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: minimal end-to-end checks that gate every phase",
  "integration: requires docker compose services",
  "gpu: requires GPU and vLLM",
  "kill_resume: subprocess SIGKILL/resume durability suite; needs postgres; run separately from the unit gate",
]
asyncio_mode = "auto"
